Updated properties to customer models, removed views and recreated, migration for customer updates

--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -18,10 +18,16 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
@@ -48,10 +54,10 @@
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Balance)
+            @Html.DisplayNameFor(model => model.AmountOwedBalance)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Balance)
+            @Html.DisplayFor(model => model.AmountOwedBalance)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DayOfWeekPickUp)
