--- a/Views/Customers/Create.cshtml
+++ b/Views/Customers/Create.cshtml
@@ -19,9 +19,14 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
@@ -44,9 +49,9 @@
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
-                <span asp-validation-for="Balance" class="text-danger"></span>
+                <label asp-for="AmountOwedBalance" class="control-label"></label>
+                <input asp-for="AmountOwedBalance" class="form-control" />
+                <span asp-validation-for="AmountOwedBalance" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DayOfWeekPickUp" class="control-label"></label>
