--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -74,6 +74,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, null) |
     <a asp-action="Index">Back to List</a>
 </div>
