Customer controller edited Post-Edit bind, trying new logic on Customer Get-Edit, Customer-Edit view added Hiddenfor Id,AmountOwed,IdentityUserId

--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -63,6 +63,10 @@
                 <input asp-for="IdentityUserId" class="form-control" />
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
             </div>
+            @Html.HiddenFor(model => model.Id);
+            @Html.HiddenFor(model => model.AmountOwedBalance);
+            @Html.HiddenFor(model => model.IdentityUserId);
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
