--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -80,9 +80,9 @@
                 @Html.DisplayFor(modelItem => item.IdentityUserId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { /*id = Model.ToList()*/ }, null) |
+                @Html.ActionLink("Details", "Details", new { /*id = Model.ToList()*/ }, null) |
+                
             </td>
         </tr>
 }
