--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -80,3 +80,12 @@
     @Html.ActionLink("Details", "Details") |
     <a asp-action="Index">Back to List</a>
 </div>
+
+@*@foreach (var item in Model)
+{
+    <tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.model.FirstName)
+        </td>
+    </tr>
+}*@
