Removed customer accounts and old data from dbo.customer

--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -27,9 +27,9 @@
                 <span asp-validation-for="DayOfWeekPickUp" class="text-danger"></span>
             </div>
 
-            @Html.HiddenFor(model => model.Id);
-            @Html.HiddenFor(model => model.AmountOwedBalance);
-            @Html.HiddenFor(model => model.IdentityUserId);
+            @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.AmountOwedBalance)
+            @Html.HiddenFor(model => model.IdentityUserId)
 
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
