--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -10,13 +10,8 @@
 <div>
     <h4>Customer</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
+    <dl class="table-bordered">
+     
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
@@ -64,12 +59,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DayOfWeekPickUp)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdentityUserId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdentityUserId)
         </dd>
     </dl>
 </div>
