--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -10,13 +10,8 @@
 <div>
     <h4>Customer</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
+    <dl class="table-bordered">
+      
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
@@ -65,27 +60,15 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DayOfWeekPickUp)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IdentityUserId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdentityUserId)
-        </dd>
+       
     </dl>
 </div>
 
 <div>
-    @Html.ActionLink("Create", "Create") |
-    @Html.ActionLink("Edit", "Edit") |
+
+    @Html.ActionLink("Change Weekly Pickup Day", "Edit") |
     @Html.ActionLink("Details", "Details") |
     <a asp-action="Index">Back to List</a>
 </div>
 
-@*@foreach (var item in Model)
-{
-    <tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.model.FirstName)
-        </td>
-    </tr>
-}*@
+
