Removed monthlyinvoice.cshtml, turned customer Details view into a monthly billing page, Customer Index - Details link labeled Monthly Billing, Customer Details - removed unncessarry fields leaving amountowedbalance as the main field in the details page

--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -52,7 +52,7 @@
             @Html.DisplayNameFor(model => model.AmountOwedBalance)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AmountOwedBalance)
+            @Html.DisplayFor(model => model.AmountOwedBalance)   
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DayOfWeekPickUp)
@@ -67,7 +67,7 @@
 <div>
 
     @Html.ActionLink("Change Weekly Pickup Day", "Edit") |
-    @Html.ActionLink("Details", "Details") |
+    @Html.ActionLink("Monthly Billing", "Details") |
     <a asp-action="Index">Back to List</a>
 </div>
 
