Changed label for edit to weekly pickup in Customer Details view

--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -22,6 +22,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit") |
+    @Html.ActionLink("Change Weekly Pickup Day", "Edit") |
     <a asp-action="Index">Back to List</a>
 </div>
