--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -5,13 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Customer Profile</h1>
 
 <div>
     <h4>Customer</h4>
     <hr />
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create">Create profile</a>
     </p>
     <dl class="table-bordered">
 
