--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -37,6 +37,17 @@
         </form>
     </div>
 </div>
+@*One-time pickup*@
+<div>
+    <label for="">Request an extra, One-time pickup:</label>
+    <input type="date" id="" name="One-time Pickup"
+           value=" "
+           min="" max="" />
+</div>
+@*Start and end Suspend pickup*@
+<div>
+
+</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
