Updated Customer model with two more properties - onetimepickupday,suspendpickupdates

--- a/Views/Customers/Edit.cshtml
+++ b/Views/Customers/Edit.cshtml
@@ -39,8 +39,8 @@
 </div>
 @*One-time pickup*@
 <div>
-    <label for="">Request an extra, One-time pickup:</label>
-    <input type="date" id="" name="One-time Pickup"
+    <label for="OneTimePickupDay">Request an extra, One-time pickup:</label>
+    <input type="date" id="OneTimePickupDay" name="One-time Pickup"
            value=" "
            min="" max="" />
 </div>
