--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -6,85 +6,49 @@
 }
 
 <h1>Today's Pickup</h1>
-
-<table class="table-bordered">
-    <thead>
-        <tr>
-
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.State)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ZipCode)
-            </th>
- 
-            <th>
-                @Html.DisplayNameFor(model => model.DayOfWeekPickUp)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OneTimePickupDay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SuspendPickupDates)
-            </th>
-
-            <th></th>
-        </tr>
-    </thead>
-    @*<tbody>
-@foreach (var item in Model) {
-        <tr>
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
-            
-            <td>
-                @Html.DisplayFor(modelItem => item.DayOfWeekPickUp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OneTimePickupDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SuspendPickupDates)
-            </td>
-           
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>*@
-</table>
 <div>
-    <a asp-action="Index">Back to Profile</a>
+    <h4>Customers</h4>
+    <hr />
+
+    <table class="table-bordered">
+        <thead>
+            <tr>
+
+                <th>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.City)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.State)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ZipCode)
+                </th>
+
+                <th>
+                    @Html.DisplayNameFor(model => model.DayOfWeekPickUp)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.OneTimePickupDay)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.SuspendPickupDates)
+                </th>
+
+                <th></th>
+            </tr>
+        </thead>
+
+    </table>
+</div>
+<div>
+    <a asp-action="Profile">View Profile</a>
 </div>
