Profile view updated with updated employee data

--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -46,9 +46,10 @@
                 <th></th>
             </tr>
         </thead>
+        
 
     </table>
 </div>
 <div>
-    <a asp-action="Profile">View Profile</a>
+    <a asp-action="Details">View Profile</a>
 </div>
