Moved updated employee data in profile view to a tbody, added an index link anchor

--- a/Views/Employees/Profile.cshtml
+++ b/Views/Employees/Profile.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a asp-action="Create">Create Profile</a>
 </p>
-<div>
+
     <table class="table">
         <thead>
             <tr>
@@ -42,6 +42,7 @@
                 <td>
                     @Html.DisplayFor(model => model.FirstName)
                 </td>
+
                 <td>
                     @Html.DisplayFor(model => model.LastName)
                 </td>
@@ -60,4 +61,7 @@
             </tr>
         </tbody>
     </table>
+
+<div>
+    <a asp-action="Index">Back to Today's Pickup</a>
 </div>
