EmployeeController actionresult index,filterview logic changes - trying to filter customers by  particular day

--- a/Views/Employees/Details.cshtml
+++ b/Views/Employees/Details.cshtml
@@ -52,6 +52,6 @@
     </dl>
 </div>
 <div>
-    
+    <a asp-action="Profile">Create profile</a> |
     <a asp-action="Index">Back to List</a>
 </div>
