--- a/Views/Employees/FilterView.cshtml
+++ b/Views/Employees/FilterView.cshtml
@@ -7,71 +7,79 @@
 
 <h1>FilterView</h1>
 
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.City)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.State)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ZipCode)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DayOfWeekPickUp)
 
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.State)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ZipCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DayOfWeekPickUp)
+            </tr>
+        </thead>
+        <form>
+            <tbody>
+                @foreach (var item in Model)
+                {
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+                    <tr>
 
-        <tr>
+                        <td><input type="checkbox" name="" id="" /></td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FirstName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.LastName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Address)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.City)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.State)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ZipCode)
+                        </td>
 
-            <td><input type="checkbox" name="" id="" /></td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DayOfWeekPickUp)
+                        </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.DayOfWeekPickUp)
-            </td>
-            <input type="submit" value="Confirm Pickups" />
+                    </tr>
 
-        </tr>
+                }
+            </tbody>
+            <tr>
+                <td>
+                    
+                    <input type="submit" value="Confirm Pickups" class="btn btn-primary" />
+                </td>
+                
+            </tr>
+        </form>
 
-        }
-    </tbody>
-    
-</table>
+    </table>
+
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
